# agentlog

./: .gitignore  README.md  demo.cast  pyproject.toml
agentlog/: __init__.py  cli.py  server.py
agentlog/parsers/: claude_code.py  hermes.py
tests/: meta-loop-001.md
