[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlog"
version = "0.1.0"
description = "CLI-first observability for personal AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai-agent", "observability", "cli", "sqlite", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
agentlog = "agentlog.cli:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = ["agentlog", "agentlog.parsers"]
